Add hyphen to binary name ping-pong

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pingpong"
+name = "ping-pong"
 version = "0.1.0"
 authors = ["Tobin C. Harding <tobin@coblox.tech>"]
 edition = "2018"
