PANICS: Use tcp-tokio libp2p feature
Listener starts ok

Starting dialer panics:

thread 'libp2p-swarm-task-0' panicked at 'there is no reactor running, must be called from the context of Tokio runtime', /home/tobin/.cargo/registry/src/github.com-1ecc6299db9ec823/tokio-0.2.21/src/io/driver/mod.rs:201:9
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 anyhow = "1.0"
 clap = "2.32"
 futures = "0.3"
-libp2p = { version = "0.19", default-features = false, features = ["tcp-async-std", "secio", "yamux", "mplex", "dns", "ping"] }
+libp2p = { version = "0.20", default-features = false, features = ["tcp-tokio", "secio", "yamux", "mplex", "dns", "ping"] }
 simple_logger = "1.6"
 tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "macros", "tcp"] }
