--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ anyhow = "1.0"
 clap = "2.32"
 futures = "0.3"
 libp2p = { version = "0.19", default-features = false, features = ["tcp-async-std", "secio", "yamux", "mplex", "dns", "ping"] }
+simple_logger = "1.6"
 tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "macros", "tcp"] }
