--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ libp2p = { version = "0.20", default-features = false, features = [ "secio", "ya
 log = "0.4"
 simple_logger = "1.6"
 socket2 = "0.3"
+structopt = "0.3"
 tokio = { version = "0.2", features = ["rt-threaded", "macros", "tcp"] }
