--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0"
 clap = "2.32"
+data-encoding = "2.2"
 futures = "0.3"
 futures-timer = "3.0"
 get_if_addrs = "0.5"
